--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 	<meta name="description" content="Olubunmi Alao | Rewards Portal | react" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link type="text/css" rel="stylesheet" href="./dist/style.css" media="all">
-
+    <link type="text/css" rel="stylesheet" href="/dist/style.css" media="all">
+	<base href="/"/>
 	<title>Rewards Portal</title>
 </head>
 
 <body>
 	<div id="app"></div>
 </body>
-<script src="./dist/bundle.js" defer></script>
+<script src="/dist/bundle.js" defer></script>
 
 </html>
