--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Olubunmi Alao | Rewards Portal | react" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link type="text/css" rel="stylesheet" href="./dist/style.css" media="all">
-	<base href="/"/>
+	<!-- <base href="/"/> -->
 	<title>Rewards Portal</title>
 </head>
 
