--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 	<meta name="description" content="Olubunmi Alao | Rewards Portal | react" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link type="text/css" rel="stylesheet" href="./dist/style.css" media="all">
+	<link type="text/css" rel="stylesheet" href="./dist/style.css" media="all">
 	<!-- <base href="/"/> -->
+	<script>
+		document.write("<base href='" + window.location.protocol + '//' + window.location.host + "' >");
+	</script>
 	<title>Rewards Portal</title>
 </head>
 
