ix table border

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 	<meta name="description" content="Olubunmi Alao | Rewards Portal | react" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" type="text/css" href="https://cdn.materialdesignicons.com/1.8.36/css/materialdesignicons.min.css">
 	<link type="text/css" rel="stylesheet" href="./dist/style.css" media="all">
 	<script>
 		(function () {
